--- a/adm_jadwal_front/src/Components/NavbarCustom.css
+++ b/adm_jadwal_front/src/Components/NavbarCustom.css
@@ -1,5 +1,5 @@
 nav.navbar, .navbar-default {
-    background-color: #c5d5cb !important;
+    background-color: #87a592 !important;
 }
 
 .navbar-default {
